@@ -1,6 +1,7 @@
 1.9.1
 -----
 1. Re-add 'Go home' button.
+2. No need to scroll search field into view if its in subtoolbar.
 
 1.9.0
 -----
